# unitree_h1_2

./: .gitmodules  Dockerfile  README.md  docker_build.sh  docker_run.sh  unitree_connection.txt
acados/matlab_acados_wheelchair_pushing_controller/: acados_ocp_nlp.json  wheelc_push_model.m  wheelc_push_ocp.m
acados/matlab_acados_wheelchair_pushing_controller/c_generated_code/: CMakeLists.txt  Makefile  acados_mex_create_wheelc_push.c  acados_mex_free_wheelc_push.c  acados_mex_set_wheelc_push.c  acados_mex_solve_wheelc_push.c  acados_sim_solver_sfunction_wheelc_push.c  acados_sim_solver_wheelc_push.c  acados_sim_solver_wheelc_push.h  acados_solver_sfunction_wheelc_push.c  acados_solver_wheelc_push.c  acados_solver_wheelc_push.h  main_mex_wheelc_push.c  main_sim_wheelc_push  main_sim_wheelc_push.c  main_wheelc_push  main_wheelc_push.c  make_main_mex_wheelc_push.m  make_mex_wheelc_push.m  make_sfun.m  make_sfun_sim.m  wheelc_push_mex_solver.m
acados/matlab_acados_wheelchair_pushing_controller/c_generated_code/wheelc_push_constraints/: wheelc_push_constr_h_fun.c  wheelc_push_constr_h_fun_jac_uxt_zt.c  wheelc_push_constraints.h
cufino_ws/: CMakeLists.txt
cufino_ws/h1_2_test/: CMakeLists.txt
cufino_ws/h1_2_test/src/: loco_arm_motion.cpp
inspire_hand_sdk/example/: Headless_driver_485_l.py  Headless_driver_485_r.py  Vision_driver_485_l.py  Vision_driver_485_r.py  dds_subscribe_485_l.py
inspire_hand_sdk/inspire_sdkpy.egg-info/: PKG-INFO  requires.txt
unitree_sdk2/: CMakeLists.txt
unitree_sdk2/example/h1/: CMakeLists.txt
(+10 files in other folders)
